--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,14 @@
     <head>
       <style>
         button {
-          height: 130px;
-          width: 130px;
+          height: 69px;
+          width: 69px;
           outline: none;
         }
       </style>
     </head>
     <body>
       <button id="changeColor"></button>
-      <script src="js/popup.js"></script>
+      <script src="js/content.js"></script>
     </body>
   </html>
